--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
 node_modules/
 src/tests/
 src/playground/
-public/bundle.js
-public/bundle.js.map
-public/styles.css
-public/styles.css.map
+public/dist/
