--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "main": "index.js",
   "author": "wils",
   "license": "MIT",
-  "engines": {
-    "node": "8.9.4"
-  },
   "scripts": {
     "serve": "live-server public/",
     "build:dev": "webpack --watch",
@@ -32,6 +29,7 @@
     "moment": "^2.22.1",
     "node-sass": "^4.8.3",
     "normalize.css": "^8.0.0",
+    "numeral": "^2.0.6",
     "raf": "^3.4.0",
     "react": "^16.3.1",
     "react-addons-shallow-compare": "^15.6.2",
@@ -47,15 +45,15 @@
     "uuid": "^3.2.1",
     "validator": "^9.4.1",
     "webpack": "^4.5.0"
-      },
+  },
   "devDependencies": {
     "chalk": "^2.3.2",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.3",
-    "react-test-renderer": "^16.3.2",
     "jest": "^22.4.3",
-    "webpack-dev-server": "^3.1.3",
-    "webpack-cli": "^2.0.14"
+    "react-test-renderer": "^16.3.2",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
   }
 }
