--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:dev": "webpack --watch",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod",
     "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
@@ -25,6 +25,7 @@
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "firebase": "^4.13.1",
     "live-server": "^1.2.0",
     "moment": "^2.22.1",
     "node-sass": "^4.8.3",
@@ -39,6 +40,8 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-mock-store": "^1.5.1",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.7",
     "semantic-ui-react": "^0.79.1",
     "style-loader": "^0.20.3",
@@ -48,6 +51,8 @@
   },
   "devDependencies": {
     "chalk": "^2.3.2",
+    "cross-env": "^5.1.4",
+    "dotenv": "^5.0.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.3",
