--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "firebase": "^4.13.1",
+    "history": "^4.7.2",
     "live-server": "^1.2.0",
     "moment": "^2.22.1",
     "node-sass": "^4.8.3",
